--- a/index.html
+++ b/index.html
@@ -9,14 +9,50 @@
 <body>
 
     <header class="header">
-       <div class="logo"> FILMFLIX</div>
+       <div class="logo">► FILMFLIX</div>
        <nav class="nav-menu">
        <a href="#">Minha Lista</a>
        <a href="#">Gêneros</a>
        <a href="#">Sobre</a>
-       <button class="menu-toggle"> </button>
+       <button class="menu-toggle"> ☰ </button>
 </nav>
 </header>
+
+    <section class="controls-section">
+    <div class="search-bar">
+    <input type="text" placeholder="Q Buscar Filmes..." class="search-input">
+    </div>
+
+   <select class="filter-dropdown" aria-label="Genero">
+   <option value="">Genero</option>
+   <option value="acao">Ação</option>
+   <option value="comedia">Comédia</option>
+   </select>
+
+   <select class="filter-dropdown" aria-label="Ordenar por">
+    <option value="default">Ordenar</option>
+   <option value="recentes">Mais Recentes</option>
+   <option value="avaliacao">Melhor Avaliação</option>
+   </select>
+</section>
+
+   <main class="main-content">
+    <div class="lista-filmes">
+        <div class="card-filme">
+         <img src="[URL_DO_POSTER]" alt="Titulo Longo do Filme" class="poster-filme">
+          <span class="avaliacao">⭐ 7.4</span>
+           <div class="card-detalhes">
+            <h3 class="titulo-filme">Título Longo do Filme (2025)</h3>
+            <button class="botao-adicionar">+ Minha Lista</button>
+     </div>
+  </div>
+
+   <div class="card-filme">
+   <img src="[URL_DO_POSTER]" alt="Outro Titulo" class="poster-filme">
+   <span class="avaliacao">⭐ 8.1</span>
+   <div class="card-detalhes">
+    
+
 
     <h1>Catálogo de Filmes</h1>
    
