--- a/index.html
+++ b/index.html
@@ -40,18 +40,28 @@
     <div class="lista-filmes">
         <div class="card-filme">
          <img src="[URL_DO_POSTER]" alt="Titulo Longo do Filme" class="poster-filme">
-          <span class="avaliacao">⭐ 7.4</span>
-           <div class="card-detalhes">
+         <span class="avaliacao">⭐ 7.4</span>
+         <div class="card-detalhes">
             <h3 class="titulo-filme">Título Longo do Filme (2025)</h3>
             <button class="botao-adicionar">+ Minha Lista</button>
      </div>
   </div>
 
    <div class="card-filme">
-   <img src="[URL_DO_POSTER]" alt="Outro Titulo" class="poster-filme">
-   <span class="avaliacao">⭐ 8.1</span>
-   <div class="card-detalhes">
-    
+    <img src="[URL_DO_POSTER]" alt="Outro Titulo" class="poster-filme">
+    <span class="avaliacao">⭐ 8.1</span>
+    <div class="card-detalhes">
+      <h3 class="titulo-filme">Outro Título Incrível (2024)</h3>
+      <button class="botao-adicionar">+ Minha Lista</button>
+      </div>
+    </div>
+
+        </div>
+    </main>
+
+    </body>
+     <script src="app.js"></script>
+  </html>
 
 
     <h1>Catálogo de Filmes</h1>
